cleaned up the home component layout with mobile responsive css

--- a/src/UI/Card.css
+++ b/src/UI/Card.css
@@ -1,9 +1,3 @@
-.cards {
-    display: flex;
-    flex-direction: row;
-}
-
-.card2 {
-    display: flex;
-    flex-direction: row;
+.card {
+  margin-bottom: 1rem;
 }
