--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,9 @@
 .button {
   font-size: calc(10px + 2vmin);
 }
+
+.main-container {
+  margin: 0 8%;
+  justify-content: center;
+  align-items: center;
+}
